fixed animations and arrows. next step is to make inert arrows invisible

--- a/personal_ws/main/static/css/main.less
+++ b/personal_ws/main/static/css/main.less
@@ -14,7 +14,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   .container { position: relative; top:100px; }
-  .header { text-align: center;
+  .header { text-align: center; margin-top: 5em;
     h1 { color: #fff; font-size: 48px; font-family: 'Shift', sans-serif; font-weight: bold; }
     p { font-size: 20px; color: #fff; }
   }
@@ -26,9 +26,10 @@
 }
 
 
-.pt-trigger-container { width: 100%; height: 100%;
+.pt-trigger-container { width: 100%; height: 100%; filter: invert(100%); -webkit-filter: invert(100%);
   .arrow-buttons {
     img { width: 150px; height: 100px; box-shadow: none; position: fixed; }
+    .top { top: -20%; right: 45%; }
     .right { transform: rotate(90deg); top: 25%; right: 0;}
     .left { transform: rotate(-90deg); top: 25%; left: 0;}
     .down { transform: rotate(180deg); top: 70%; left: 45%; }
